--- a/app/src/main/res/layout/instruction_fragment.xml
+++ b/app/src/main/res/layout/instruction_fragment.xml
@@ -3,25 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable
-            name="accountViewModel"
-            type="com.udacity.shoestore.AccountViewModel" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/welcome_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".WelcomeFragment">
+        tools:context=".InstructionFragment">
 
         <TextView
-            android:id="@+id/welcome_text"
+            android:id="@+id/app_name_text"
             style="@style/NameStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/welcome"
-            app:layout_constraintBottom_toTopOf="@+id/user_name_text"
+            android:text="@string/app_name"
+            app:layout_constraintBottom_toTopOf="@+id/instruction_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,32 +23,19 @@
             app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
-            android:id="@+id/user_name_text"
+            android:id="@+id/instruction_text"
             style="@style/NameStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{accountViewModel.username}"
-            android:textColor="@color/colorPrimary"
-            app:layout_constraintBottom_toTopOf="@+id/resume_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/welcome_text"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <TextView
-            android:id="@+id/resume_text"
-            style="@style/NameStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/resume"
+            android:text="@string/instructions"
+            android:textAlignment="viewStart"
             android:textSize="20sp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_name_text"
             app:layout_constraintBottom_toTopOf="@+id/start_button"
-            app:layout_constraintTop_toBottomOf="@+id/user_name_text"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <Button
@@ -65,11 +46,11 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/roboto"
-            android:text="@string/start"
+            android:text="@string/view_list"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resume_text" />
+            app:layout_constraintTop_toBottomOf="@+id/instruction_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
