--- a/app/src/main/res/layout/instruction_fragment.xml
+++ b/app/src/main/res/layout/instruction_fragment.xml
@@ -35,11 +35,11 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/app_name_text"
-            app:layout_constraintBottom_toTopOf="@+id/start_button"
+            app:layout_constraintBottom_toTopOf="@+id/view_button"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <Button
-            android:id="@+id/start_button"
+            android:id="@+id/view_button"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
