--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -42,5 +42,18 @@
         android:id="@+id/shoe_list_fragment"
         android:name="com.udacity.shoestore.ShoeListFragment"
         android:label="Shoe List"
-        tools:layout="@layout/shoe_list_fragment" />
+        tools:layout="@layout/shoe_list_fragment" >
+        <action
+            android:id="@+id/action_shoe_list_to_shoe_detail"
+            app:destination="@id/shoe_detail_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/shoe_detail_fragment"
+        android:name="com.udacity.shoestore.ShoeDetailFragment"
+        android:label="Shoe Detail"
+        tools:layout="@layout/shoe_detail_fragment">
+        <action
+            android:id="@+id/action_shoe_detail_fragment_to_shoe_list_fragment"
+            app:destination="@id/shoe_list_fragment" />
+    </fragment>
 </navigation>
