--- a/app/src/main/res/layout/shoe_list_fragment.xml
+++ b/app/src/main/res/layout/shoe_list_fragment.xml
@@ -3,30 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
-        android:id="@+id/shoe_list_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
         tools:context=".ShoeListFragment">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            tools:ignore="UselessParent">
 
-            <FrameLayout
+            <LinearLayout
+                android:id="@+id/shoe_list_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:ignore="UselessParent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/add_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|bottom"
-                    android:src="@drawable/ic_add"
-                    android:layout_margin="@dimen/layout_margin"/>
-            </FrameLayout>
-        </LinearLayout>
+            </LinearLayout>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/add_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_margin="@dimen/layout_margin"
+                android:src="@drawable/ic_add" />
+        </FrameLayout>
     </ScrollView>
 </layout>
