--- a/app/src/main/res/layout/shoe_item.xml
+++ b/app/src/main/res/layout/shoe_item.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/name_label"
         style="@style/NameStyle"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/shoe_name"
-        app:layout_constraintBaseline_toBaselineOf="@+id/company_label"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:text="@string/shoe_name"/>
 
     <TextView
         android:id="@+id/company_label"
         style="@style/NameStyle"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/shoe_company"
-        app:layout_constraintEnd_toStartOf="@id/size_label"
-        app:layout_constraintStart_toEndOf="@id/name_label"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/shoe_company"/>
 
     <TextView
         android:id="@+id/size_label"
         style="@style/NameStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/shoe_size"
-        app:layout_constraintBaseline_toBaselineOf="@+id/company_label"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:text="@string/shoe_size"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
